--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
             </header>
         </section>
         <footer>
-
+            <ul>
+                <li>
+                    <a href="mailto:nebbering97@gmail.com" target="_blank">Email</a>
+                </li>
+                <li>
+                    <a href="https://github.com/nebbering" target="_blank">GitHub</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/luan-h-nebbering-aa209142/" target="_blank">LinkedIn</a>
+                </li>
+            </ul>
         </footer>
     </body>
 </html>
