--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>Chris Rock</title>
+        <link rel="stylesheet" href="/ChrisRock/style.css">
     </head>
     <body>
         <header>
             <img src="/ChrisRock/Imagens/chris.jpg" alt="Imagem do Protagonista Chris Rock">
-            <h1>Chris Rock</h1>
+            <h1 id="title">Chris Rock</h1>
         </header>
         <section>
             <header>
-                <h2>POSTS</h2>
+                <h2 class="subtitle">POSTS</h2>
                 <article>
                     <header>
-                        <h3>POSTS #1</h3>
+                        <h3 class="post_title">POSTS #1</h3>
                         <img src="/ChrisRock/Imagens/ebhc.jpg" alt="Wallpaper da Serie">
-                    </header>
+                    </header> 
                     <p>
                         "Lorem ipsum dolor <a href="mailto:nebbering97@gmail.com">LUAN NEBBERING</a> sit amet, consectetur adipiscing elit. <a href="https://www.linkedin.com/in/luan-h-nebbering-aa209142/" target="_blank">LINKEDIN</a> Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing."
                     </p>
